# nanoLLM

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  misc.py  pyproject.toml  shakespeare_char.ipynb  shakespeare_words.ipynb  test.py  train.py
data/shakespeare_char/: prepare.py
data/shakespeare_word/: prepare.py
data/wiki_kings/: prepare.py  scrap_wikipedia.py  train_tokenizer.py
model/: attention.py  gpt2.py  misc.py
nanoLLMs/: __init__.py  misc.py  trainer.py
nanoLLMs/model/: __init__.py  gpt2.py  llm_mamba.py  mamba.py  xlstm.py
nanoLLMs/trainer/: __init__.py  gpt_trainer.py
notebooks/: shakespeare_char.ipynb  shakespeare_words.ipynb
trainer/: gpt_trainer.py
