[project]
name = "nanoLLMs"
version = "0.1.0"
description = "Implementation of nano LLMs (GTP and MAMBA architectures)"
readme = "README.md"
requires-python =">=3.11"
authors = [
  {name = "thibault monsel"},
]
keywords = ["torch"]

urls = {repository = "https://github.com/thibmonsel/nanoLLMs" }
dependencies = ["torch>=2.1", "jaxtyping>=0.2.24", "typing_extensions>=4.5.0", "numpy", "tqdm", "matplotlib",]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["nanoLLMs/*"]

[tool.pytest.ini_options]
addopts = "--jaxtyping-packages=torchdde,beartype.beartype(conf=beartype.BeartypeConf(strategy=beartype.BeartypeStrategy.On))"
markers = ["slow"]

[tool.ruff]
extend-include = ["*.ipynb"]
fixable = ["I001", "F401"]
ignore = ["E402", "E721", "E731", "E741", "F722"]
ignore-init-module-imports = true
select = ["E", "F", "I001"]
src = []


[tool.black]
line-length = 79
[tool.pycln]
all = true
[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true